styles.css
* {
    box-sizing: content-box;
    margin: 0;
    list-style-type: none;
}

:root {
    --sidebarColor: #6f6fe3;
}

ul {
    padding: 0;
}

body {
    display: flex;
    height: 100vh;
}

.sidebar {
    background-color: var(--sidebarColor);
    display: flex;
    flex-direction: column;
    gap: 5rem;
    padding: 2rem 6rem 2rem 1rem;
    color: white;
    overflow: auto;
    flex-basis: 10rem;
    flex-shrink: 1;
}

li {
    display: flex;
    gap: 1rem;
    justify-content: flex-start;
    align-items:  center;
}

h1 {
    font-size: clamp(1rem, 0.5rem + 3vh, 3rem);
}
.sidebar > section > ul{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    font-size: clamp(1rem, 0.1rem + 2.7vh, 2rem);
}

a.navLink {
    text-decoration: none;
}
a.navLink:visited {
    color: white;
}

.mainPageContainer {
    display: flex;
    flex-direction: column;
    max-height: 100vh;
    flex-grow: 1;
    flex-shrink: 0.5;
    flex-basis: 50%;
}

.mainPageContainer > header {
    min-height: 5rem;
    max-height: 10rem;
    flex: 1 1 auto;
    display: grid;
    grid-template:  1fr 2fr / 1fr 10em 30em;


    border: 3px solid red;
}

.searchBarContainer {
    padding: 0 1rem;
    display: flex;
    align-items: center;
    gap: 1rem;
}

.searchBarContainer > input {
    border-radius: 20px;
    flex: 1;
    padding: 5px;
    border-color: rgb(228, 228, 228);
    border-style: solid;
    background-color: rgb(228, 228, 228);
}




.mainPageContainer > main {
    flex: 1 1 auto;
    border: 3px solid green;
    overflow: auto;
    min-height: 700px;
}




main {
    display: grid;
    grid-template: repeat(2, 1fr) / 3fr 1fr;
    padding: 1rem;
    gap: 2rem;
    background-color: #e2e8f0;
}

.cardTitleContainer {
    display: grid;
    grid-template-rows: min-content 1fr;
    gap: 1rem;
    padding: 1rem;
    border-radius: 1rem;
}

.projectsCardTitleContainer {
    grid-row: 1 / span 2;
}

.projectsContainer {
    display: grid;
    grid-template: repeat(3, 1fr) / repeat(2, 1fr);
    gap: 1rem;
    overflow: auto;
}

.projectsContainer>article {
    background-color: white;
    border-radius: 0.7rem 1rem 1rem 0.7rem;
    display: grid;
    column-gap: 1rem;
    grid-template: 2rem 1fr 1rem / 1fr repeat(3, 1rem);
    grid-template-areas:
        'title  title  title  title'
        'text  text  text  text'
        '.  button  button  button';
    position: relative;
    align-items:center;
    padding:2rem;
}
article::before {
    content: "";
    background-color: orange;
    height: 100%;
    max-width: 10px;
    border-radius: 1rem 0 0 1rem;
    position:absolute;
    width: min(1vw, 10px);
}

article>h4 {
    grid-area: title;
}
article>p {
    grid-area: text;
}

.listContainer {
    background-color: white;
    border-radius: 1rem;
    padding: 2rem;
}

